Fixed SS-1240 java version